Add /Music in The Martian Chronicles/

--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="Info shared by mjgpy3"
-    />
-    <title>mjgpy3 | Info</title>
-  </head>
-  <body>
-    <h1>Info from mjgpy3</h1>
-  </body>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta
+            name="description"
+            content="Info shared by mjgpy3"
+        />
+        <title>mjgpy3 | Info</title>
+    </head>
+    <body>
+        <h1>Info from mjgpy3</h1>
+        <ol>
+            <li><a href="/pages/music-in-martian-chronicles.html">
+                <h1>Music in <i>The Martian Chronicles</i></h1></a>
+            </li>
+        </ol>
+    </body>
 </html>
