--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <body>
         <h1>Info from mjgpy3</h1>
         <ol>
-            <li><a href="/pages/music-in-martian-chronicles.html">
-                <h1>Music in <i>The Martian Chronicles</i></h1></a>
+            <li>
+                <a href="/info/pages/music-in-martian-chronicles.html">Music in <i>The Martian Chronicles</i></a>
             </li>
         </ol>
     </body>
